# QuantOS-trading

./: .gitignore  Cargo.toml  README.md  cerebro_leyenda.pkl  escalador_leyenda.pkl  model.pkl  xgb_calibrated_model.pkl
models/: quantos_brain_v1.pkl  quantos_scaler_v1.pkl
src/: constants.rs  main.rs
src/brain/: model_loader.rs
src/data/: binance_client.rs  data_buffer.rs  macro_filter.rs  mod.rs
src/trading/: executor.rs  mod.rs  position_manager.rs
